k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securepulse
  namespace: default
  labels:
    app: securepulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: securepulse
  template:
    metadata:
      labels:
        app: securepulse
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: securepulse
          image: 303789596018.dkr.ecr.us-east-1.amazonaws.com/securepulse:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir: {}
