k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: securepulse
  namespace: default
  labels:
    app: securepulse
spec:
  type: LoadBalancer
  selector:
    app: securepulse
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
